Docker & Docker compose support has been added

--- a/Checkout.PaymentGateway.Api/Checkout.PaymentGateway.Api.csproj
+++ b/Checkout.PaymentGateway.Api/Checkout.PaymentGateway.Api.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net5.0</TargetFramework>
     <UserSecretsId>aspnet-Checkout.PaymentGateway.Api-67C69BE5-DEC6-4EA4-8024-D9C3055D797F</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
