--- a/Checkout.PaymentGateway.IdentityServer/Checkout.PaymentGateway.IdentityServer.csproj
+++ b/Checkout.PaymentGateway.IdentityServer/Checkout.PaymentGateway.IdentityServer.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net5.0</TargetFramework>
     <UserSecretsId>fc1d4011-cd66-4041-85a7-f8c3863f14c2</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
